--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body {
   color: gray;
   border-radius: 10px;
   background-color: #F4EDEA;
-  border: 10px solid #06BDC1;
+  border: 10px solid 	
+#FAFAD2;
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.9);
 }
 
